--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,15 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 Flask==2.2.3
+Flask-MySQLdb==1.0.1
 gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-mysql-connector-python==8.0.32
+mysqlclient==2.1.1
 protobuf==3.20.3
+PyMySQL==1.0.2
 requests==2.28.2
 urllib3==1.26.15
 Werkzeug==2.2.3
