--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 mysqlclient==2.1.1
 protobuf==3.20.3
+pyjwt==2.0.0
 PyMySQL==1.0.2
 requests==2.28.2
 six==1.16.0
 urllib3==1.26.15
+uuid
 Werkzeug==2.2.3
