--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+cryptography==40.0.1
 Flask==2.2.3
 Flask-Cors==3.0.10
+Flask-Login==0.6.2
 Flask-MySQLdb==1.0.1
 gunicorn==20.1.0
 idna==3.4
@@ -10,8 +13,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 mysqlclient==2.1.1
+oauthlib==3.2.2
 protobuf==3.20.3
+pycparser==2.21
 PyMySQL==1.0.2
+pyOpenSSL==23.1.1
 requests==2.28.2
 six==1.16.0
 urllib3==1.26.15
