--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,7 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  http: ^0.12.0 
+  http: ^0.12.0
+  url_launcher: ^6.0.3 
   flutter:
     sdk: flutter
 
@@ -78,15 +79,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Alfa Slab One
+      fonts:
+        - asset: fonts/AlfaSlabOne-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Bree Serif
+      fonts:
+        - asset: fonts/BreeSerif-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
