--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.1
   google_fonts: ^1.1.2
+  requests: ^3.3.0
+  google_sign_in: ^5.4.4
 
 dev_dependencies:
   flutter_test:
