--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.1
   google_fonts: ^1.1.2
+  multiselect: ^0.1.0
 
 dev_dependencies:
   flutter_test:
