--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.1
-  google_fonts: ^1.1.2
+  google_fonts: ^4.0.3
   multiselect: ^0.1.0
+  requests: ^4.7.0
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
