Ändrat namnet på appen
Lagt till en tillfällig launcher icon

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,11 +43,12 @@ dependencies:
   requests: ^4.7.0
   google_sign_in: ^6.1.0
   flutter_bloc: ^8.1.2
+  rename_app: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -99,3 +100,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
