--- a/app/windows/CMakeLists.txt
+++ b/app/windows/CMakeLists.txt
@@ -4,7 +4,7 @@ project(first LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "first")
+set(BINARY_NAME "Cookit")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
