--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   url_launcher: ^6.0.3 
   flutter:
     sdk: flutter
-
+  flutter_barcode_scanner: ^2.0.0
+  # flutter_mobile_vision_2: ^0.1.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
