--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,10 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^0.13.4
-  url_launcher: ^6.0.3 
+  url_launcher: ^6.0.3
   flutter:
     sdk: flutter
-
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
