--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   rename_app: ^1.1.0
   flutter_rating_bar: ^4.0.1
+  mobile_scanner: ^3.2.0
 
 dev_dependencies:
   flutter_test:
